@@ -1,5 +1,6 @@
 Version 4.0.21 (2014-03-xx)
 	Fixed bug where iOS 7.1 Safari would open linked when images where inserted into links.
+	Fixed issue where the UndoManager transact method couldn't be nested since it only had one lock.
 Version 4.0.20 (2014-03-18)
 	Fixed so all unit tests can be executed in a headless phantomjs instance for CI testing.
 	Fixed so directionality setting gets applied to the preview dialog as well as the editor body element.
